--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -130,7 +130,7 @@
             <div class="hero-variant" data-variant="a">
               <h3 class="text-2xl md:text-3xl font-bold text-balance break-anywhere">从“点击”到“对话”</h3>
               <p class="mt-4 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
-                将静态、以点击为主的应用升级为以对话为主的体验。用户不再不停找菜单和购物车，而是与懂意图、可执行的“智能礼宾”互动。对话取代点击，让日常任务以更自然、主动且更具参与感的方式完成。
+                将静态、以点击为主的应用升级为以对话为主的体验。用户不再不停找菜单和购物车，而是与懂意图、可执行的“智能体”互动。对话取代点击，让日常任务以更自然、主动且更具参与感的方式完成。
               </p>
             </div>
             <!-- 变体 B（更大胆） -->
