--- a/en/neuronkit/insights/from_clickstream_to_dialogstream.html
+++ b/en/neuronkit/insights/from_clickstream_to_dialogstream.html
@@ -46,7 +46,21 @@
         }
     </style>
 </head>
-<body class="bg-[#073B4C] text-gray-800">
+<body class="bg-zinc-50 dark:bg-zinc-950 text-zinc-900 dark:text-zinc-100">
+
+    <!-- Top nav -->
+    <header class="bg-[#052A38]/70 backdrop-blur sticky top-0 z-30">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-14 flex items-center justify-between">
+            <div class="flex items-center gap-3">
+                <a href="/en/neuronkit/index.html" class="text-white/90 hover:text-white text-sm">NeuronKit</a>
+                <span class="text-white/40">/</span>
+                <a href="/en/neuronkit/insights/" class="text-white/90 hover:text-white text-sm">Insights</a>
+            </div>
+            <div class="flex items-center gap-3 text-sm">
+                <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="px-2.5 py-1 rounded-md border border-white/20 text-white/90 hover:text-white hover:bg-white/10">中文</a>
+            </div>
+        </div>
+    </header>
 
     <div class="container mx-auto p-4 md:p-8">
 
@@ -57,9 +71,9 @@
 
         <main class="space-y-12 md:space-y-16">
 
-            <section class="bg-white rounded-xl shadow-2xl p-6 md:p-8">
-                <h2 class="text-3xl font-bold text-center mb-6 text-[#073B4C]">A New Web Paradigm</h2>
-                <p class="max-w-4xl mx-auto text-center text-gray-600 mb-8">The internet is undergoing its most significant transformation yet. We are moving from a web of static pages and predefined paths to a dynamic ecosystem powered by intelligent, proactive AI agents. This isn't just about chatbots; it's a fundamental change in how we interact with digital information and services.</p>
+            <section class="bg-white dark:bg-zinc-900 rounded-xl shadow-2xl p-6 md:p-8">
+                <h2 class="text-3xl font-bold text-center mb-6">A New Web Paradigm</h2>
+                <p class="max-w-4xl mx-auto text-center text-zinc-600 dark:text-zinc-300 mb-8">The internet is undergoing its most significant transformation yet. We are moving from a web of static pages and predefined paths to a dynamic ecosystem powered by intelligent, proactive AI agents. This isn't just about chatbots; it's a fundamental change in how we interact with digital information and services.</p>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-center">
                     <div class="bg-red-50 p-6 rounded-lg border-2 border-[#FF6B6B]">
                         <h3 class="text-2xl font-bold mb-2 text-[#FF6B6B]">THEN: The Web of Pages</h3>
@@ -76,9 +90,9 @@
                 </div>
             </section>
             
-            <section class="bg-white rounded-xl shadow-2xl p-6 md:p-8">
-                <h2 class="text-3xl font-bold text-center mb-6 text-[#073B4C]">The Rise of Generative UI</h2>
-                 <p class="max-w-4xl mx-auto text-center text-gray-600 mb-8">Natural language is powerful, but it won't entirely replace graphical interfaces. The future is a seamless blend of conversation and dynamically generated UI components. Instead of fixed forms and buttons, agents will create and present the necessary UI in real-time, creating a fluid, contextual "stream of structural info interwoven with non-structural natural language flow."</p>
+            <section class="bg-white dark:bg-zinc-900 rounded-xl shadow-2xl p-6 md:p-8">
+                <h2 class="text-3xl font-bold text-center mb-6">The Rise of Generative UI</h2>
+                 <p class="max-w-4xl mx-auto text-center text-zinc-600 dark:text-zinc-300 mb-8">Natural language is powerful, but it won't entirely replace graphical interfaces. The future is a seamless blend of conversation and dynamically generated UI components. Instead of fixed forms and buttons, agents will create and present the necessary UI in real-time, creating a fluid, contextual "stream of structural info interwoven with non-structural natural language flow."</p>
                 <div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-4 text-center">
                     <div class="p-4 rounded-lg flow-box w-full md:w-1/4">
                         <p class="font-bold">Natural Language Input</p>
@@ -99,9 +113,9 @@
                 </div>
             </section>
 
-            <section class="bg-white rounded-xl shadow-2xl p-6 md:p-8">
-                <h2 class="text-3xl font-bold text-center mb-6 text-[#073B4C]">Protocols for a Generative UI: MCP-UI & AG-UI</h2>
-                <p class="max-w-4xl mx-auto text-center text-gray-600 mb-8">To bring generative UI to life, the web needs new protocols. MCP-UI and AG-UI are proposed standards that provide the technical framework for agents to generate and present dynamic user interfaces. They bridge the gap between an agent's logic and the visual experience.</p>
+            <section class="bg-white dark:bg-zinc-900 rounded-xl shadow-2xl p-6 md:p-8">
+                <h2 class="text-3xl font-bold text-center mb-6">Protocols for a Generative UI: MCP-UI & AG-UI</h2>
+                <p class="max-w-4xl mx-auto text-center text-zinc-600 dark:text-zinc-300 mb-8">To bring generative UI to life, the web needs new protocols. MCP-UI and AG-UI are proposed standards that provide the technical framework for agents to generate and present dynamic user interfaces. They bridge the gap between an agent's logic and the visual experience.</p>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center text-center">
                      <div class="p-6 rounded-lg bg-[#F0F4F8] border-2 border-[#118AB2] h-full flex flex-col justify-center">
                         <h3 class="text-2xl font-bold mb-2 text-[#118AB2]">MCP-UI</h3>
@@ -114,17 +128,17 @@
                 </div>
             </section>
 
-            <section class="bg-white rounded-xl shadow-2xl p-6 md:p-8">
-                <h2 class="text-3xl font-bold text-center mb-6 text-[#073B4C]">The Agentic Evolution of Applications</h2>
-                <p class="max-w-4xl mx-auto text-center text-gray-600 mb-8">The adoption of AI agents in applications will occur in stages, shifting from simple enhancements to agents becoming the primary interface. This evolution marks a transition from users operating software to collaborating with intelligent systems that perform complex tasks autonomously.</p>
+            <section class="bg-white dark:bg-zinc-900 rounded-xl shadow-2xl p-6 md:p-8">
+                <h2 class="text-3xl font-bold text-center mb-6">The Agentic Evolution of Applications</h2>
+                <p class="max-w-4xl mx-auto text-center text-zinc-600 dark:text-zinc-300 mb-8">The adoption of AI agents in applications will occur in stages, shifting from simple enhancements to agents becoming the primary interface. This evolution marks a transition from users operating software to collaborating with intelligent systems that perform complex tasks autonomously.</p>
                 <div class="chart-container">
                     <canvas id="agentEvolutionChart"></canvas>
                 </div>
             </section>
 
-            <section class="bg-white rounded-xl shadow-2xl p-6 md:p-8">
-                <h2 class="text-3xl font-bold text-center mb-6 text-[#073B4C]">Building the Foundation: WebMCP</h2>
-                <p class="max-w-4xl mx-auto text-center text-gray-600 mb-8">For agents to function effectively, they need a new protocol—an "HTTP for agents." The proposed Web Multi-provider Compute Protocol (WebMCP) provides this foundation, enabling agents to interact with web services through structured, machine-readable actions rather than by parsing visual UIs.</p>
+            <section class="bg-white dark:bg-zinc-900 rounded-xl shadow-2xl p-6 md:p-8">
+                <h2 class="text-3xl font-bold text-center mb-6">Building the Foundation: WebMCP</h2>
+                <p class="max-w-4xl mx-auto text-center text-zinc-600 dark:text-zinc-300 mb-8">For agents to function effectively, they need a new protocol—an "HTTP for agents." The proposed Web Multi-provider Compute Protocol (WebMCP) provides this foundation, enabling agents to interact with web services through structured, machine-readable actions rather than by parsing visual UIs.</p>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
                     <div class="chart-container h-80 md:h-96">
                         <canvas id="webmcpChart"></canvas>
@@ -148,9 +162,9 @@
                 </div>
             </section>
             
-            <section class="bg-white rounded-xl shadow-2xl p-6 md:p-8">
-                 <h2 class="text-3xl font-bold text-center mb-6 text-[#073B4C]">Core Challenges on the Path Forward</h2>
-                 <p class="max-w-4xl mx-auto text-center text-gray-600 mb-8">Making the web truly "agent-native" requires solving fundamental challenges that arise when machines, not humans, are the primary users. The current web ecosystem was not designed for this new paradigm.</p>
+            <section class="bg-white dark:bg-zinc-900 rounded-xl shadow-2xl p-6 md:p-8">
+                 <h2 class="text-3xl font-bold text-center mb-6">Core Challenges on the Path Forward</h2>
+                 <p class="max-w-4xl mx-auto text-center text-zinc-600 dark:text-zinc-300 mb-8">Making the web truly "agent-native" requires solving fundamental challenges that arise when machines, not humans, are the primary users. The current web ecosystem was not designed for this new paradigm.</p>
                  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
                     <div class="p-6 rounded-lg bg-gray-50 border-t-4 border-[#FF6B6B]">
                         <h3 class="text-xl font-bold mb-2">Accuracy & Efficiency</h3>
@@ -173,8 +187,8 @@
 
         </main>
 
-        <footer class="text-center mt-12 md:mt-16 pt-8 border-t border-blue-800">
-            <p class="text-white">A new user experience is not just on the horizon—it's being built today. The fusion of generative UI and agentic protocols will create a more intuitive, efficient, and collaborative digital world.</p>
+        <footer class="text-center mt-12 md:mt-16 pt-8 border-t border-zinc-200 dark:border-zinc-800">
+            <p class="text-zinc-700 dark:text-zinc-300">A new user experience is not just on the horizon—it's being built today. The fusion of generative UI and agentic protocols will create a more intuitive, efficient, and collaborative digital world.</p>
         </footer>
 
     </div>
