--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -323,10 +323,38 @@ flowchart LR
   <section id="whitepaper" class="py-12 md:py-20">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">洞见</h2>
-      <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">深入了解 NeuronKit 的架构、能力模型与安全设计：云端记忆、设备侧沙箱（PDP/PEP）与对话式 UI 如何协同，构建安全的上下文智能体验。</p>
-      <div class="mt-6 flex flex-wrap gap-3">
-        <a href="/zh/neuronkit/whitepaper/" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">在线阅读</a>
-        <a href="#" class="px-5 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">下载 PDF（即将提供）</a>
+      <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">精选文章与白皮书：框架、参考架构与深度分析。</p>
+
+      <div class="mt-8 grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <a href="/zh/neuronkit/whitepaper/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 hover:-translate-y-0.5 transition duration-200">
+          <div class="text-xs uppercase tracking-wide text-zinc-500">报告</div>
+          <h3 class="mt-1 font-semibold">电商的转型：从点击流到对话流</h3>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">对话流与 Agentic 体验如何重塑漏斗、个性化与度量体系。</p>
+        </a>
+
+        <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 hover:-translate-y-0.5 transition duration-200">
+          <div class="text-xs uppercase tracking-wide text-zinc-500">洞见</div>
+          <h3 class="mt-1 font-semibold">从点击流到对话流（可视化）</h3>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">图表展示 Agentic 转型与生成式 UI。</p>
+        </a>
+
+        <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 hover:-translate-y-0.5 transition duration-200">
+          <div class="text-xs uppercase tracking-wide text-zinc-500">白皮书</div>
+          <h3 class="mt-1 font-semibold">面向 Agent 的沙箱</h3>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">面向代理系统的沙箱分类与设计模式。</p>
+        </a>
+
+        <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 hover:-translate-y-0.5 transition duration-200">
+          <div class="text-xs uppercase tracking-wide text-zinc-500">报告</div>
+          <h3 class="mt-1 font-semibold">智能体经济新指南</h3>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">从眼球经济到智能体经济：AI 原生商业模型与信任框架。</p>
+        </a>
+      </div>
+
+      <div class="mt-8">
+        <a href="/zh/neuronkit/insights/" class="inline-flex items-center gap-2 px-4 py-2 rounded-xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900">查看全部洞见
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-4 w-4"><path d="M13.5 4.5L21 12l-7.5 7.5-1.06-1.06L18.38 13H3v-2h15.38l-5.94-5.94 1.06-1.06Z"/></svg>
+        </a>
       </div>
     </div>
   </section>
