--- a/zh/neuronkit/insights/from_clickstream_to_dialogstream.html
+++ b/zh/neuronkit/insights/from_clickstream_to_dialogstream.html
@@ -10,34 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: transparent;
-        }
-        .chart-container {
-            position: relative;
-            width: 100%;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-            height: 350px;
-            max-height: 400px;
-        }
-        @media (min-width: 768px) {
-            .chart-container {
-                height: 400px;
-            }
-        }
-        .gradient-text {
-            background: linear-gradient(to right, #118AB2, #06D6A0);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            color: transparent;
-        }
-        .flow-arrow { font-size: 2rem; color: #118AB2; line-height: 1; }
-        .flow-box { border: 2px solid #118AB2; background-color: #ffffff; }
+        body { font-family: 'Inter', sans-serif; background-color: transparent; }
     </style>
+    <link rel="stylesheet" href="/assets/visual-article.css">
 </head>
 <body class="bg-zinc-50 dark:bg-zinc-950 text-zinc-900 dark:text-zinc-100">
 
@@ -179,6 +154,13 @@
             </section>
 
         </main>
+
+        <div class="mt-10 flex items-center justify-center">
+            <a href="/zh/neuronkit/insights/" class="inline-flex items-center gap-2 px-4 py-2 rounded-xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 transition">
+                返回洞见
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-4 w-4"><path d="M10.5 19.5L3 12l7.5-7.5 1.06 1.06L5.62 11H21v2H5.62l5.94 5.94-1.06 1.06Z"/></svg>
+            </a>
+        </div>
 
         <footer class="text-center mt-12 md:mt-16 pt-8 border-t border-zinc-200 dark:border-zinc-800">
             <p class="text-zinc-700 dark:text-zinc-300">“生成式 UI + 智能体协议”的融合，正在创造更直观、高效、协作的数字世界。</p>
