--- a/zh/neuronkit/insights/from_clickstream_to_dialogstream.html
+++ b/zh/neuronkit/insights/from_clickstream_to_dialogstream.html
@@ -1,3 +1,6 @@
+---
+layout: none
+---
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -16,19 +19,7 @@
 </head>
 <body class="bg-zinc-50 dark:bg-zinc-950 text-zinc-900 dark:text-zinc-100">
 
-    <!-- Top nav -->
-    <header class="bg-[#052A38]/70 backdrop-blur sticky top-0 z-30">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-14 flex items-center justify-between">
-            <div class="flex items-center gap-3">
-                <a href="/zh/neuronkit/index.html" class="text-white/90 hover:text-white text-sm">NeuronKit</a>
-                <span class="text-white/40">/</span>
-                <a href="/zh/neuronkit/insights/" class="text-white/90 hover:text-white text-sm">洞见</a>
-            </div>
-            <div class="flex items-center gap-3 text-sm">
-                <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="px-2.5 py-1 rounded-md border border-white/20 text-white/90 hover:text-white hover:bg-white/10">English</a>
-            </div>
-        </div>
-    </header>
+    {% include visual-topnav.html %}
 
     <div class="container mx-auto p-4 md:p-8">
 
